--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^5.4.6",
     "bootstrap": "^5.2.3",
+    "immer": "^10.0.1",
     "moment": "^2.29.4",
     "react": "^16.13.1",
     "react-bootstrap": "^2.7.4",
