--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.3.0",
     "sweetalert2": "^9.13.2",
     "uuid": "^9.0.0"
   },
